# velox-tui

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
src/: app.rs  main.rs  models.rs
src/scanner/: hardware.rs  mod.rs  software.rs  usage.rs  worker.rs
src/ui/: layout.rs  mod.rs  widgets.rs
